--- a/code/adventofcode-2020.Tests/adventofcode-2020.Tests.csproj
+++ b/code/adventofcode-2020.Tests/adventofcode-2020.Tests.csproj
@@ -24,6 +24,12 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <None Update="Task6\Data.txt">
+	    <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+	  </None>
+	  <None Update="Task5\Data.txt">
+	    <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+	  </None>
 	  <None Update="Task4\Data.txt">
 	    <CopyToOutputDirectory>Always</CopyToOutputDirectory>
 	  </None>
